Uploaded image for project: 'Qpid Proton'
  1. Qpid Proton
  2. PROTON-2252

Coverity warning of buffer overrun in pn_proactor_addr

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • proton-c-0.27.0, proton-c-0.31.0
    • proton-c-0.32.0
    • proton-c
    • None

    Description

      Error: OVERRUN (CWE-119):
      qpid-proton-0.27.0/c/tests/proactor_test.cpp:613: overrun-buffer-arg: Overrunning array "sl" of 1024 bytes by passing it to a function which accesses it at byte offset 1024 using argument "1024UL".
      #  611|
      #  612|     pn_transport_t *st = pn_connection_transport(s);
      #  613|->   pn_netaddr_str(pn_transport_local_addr(st), sl, sizeof(sl));
      #  614|     CHECK_THAT(cr, Equals(sl)); /* client remote == server local */
      

      Attachments

        Activity

          People

            jdanek Jiri Daněk
            jdanek Jiri Daněk
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: