PROTON-2252 Fix Coverity warning of buffer overrun in pn_proactor_addr (#267)